<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Donor</string>
    <string name="profile">Profile</string>
    <string name="Search">Search</string>
    <string name="city">City </string>
    <string name="Bg">Blood Group</string>
    <string name="logout">Logout \nAccount</string>
    <string name="updateprofile">Update \nAccount</string>
    <string name="delete">Delete \nAccount</string>
    <string name="hello_world">Hello world!</string>
    <string name="blood_group">Blood group(in capital)</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Full address</string>
    <string name="ct">City</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">I agree to all terms and conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

</resources>