<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:layout_weight="0.8">




    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/city"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Bg"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/Search"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:orientation="vertical">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4499196016486715/8741479970">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</LinearLayout>
